unicard_types_macro/tests/ui/enum_generic_test.stderr
error: WasmType does not support generics
 --> tests/ui/enum_generic_test.rs:5:13
  |
5 | pub enum Bar<'a, T> {
  |             ^
